# raydar

./: .gitignore  CMakeLists.txt  vcpkg.json
assets/: cornel_box.usda  cornell_box.usda  ideas.txt  profile.txt  spd_to_spd.py  spectral.py  spectrum_gen_lab.py  spectrum_gen_rgb.py  train_spectral.py
lib/Release/: raydar.exp
src/: camera.h  light.h  main.c  main.cpp  material.h  mis_material.h  nanort.h  raydar.h  render.cpp  render.h
src/core/: camera.h  light.h  material.h  mesh.h
src/data/: aabb.h  bvh.h  color.h  hittable.h  hittable_list.h  interval.h  obj.h  onb.h  pdf.h  quad.h  ray.h  spd_generator.h  spectrum.h  sphere.h  texture.h  triangle.h  usd_mesh.h  vec3.h
src/dl/: spectral_net.h
src/helpers/: blue_noise.h  math.h  random.h  settings.h  strings.h
src/image/: image.cpp  image.h  image_png.cpp  image_png.h  image_spd.h  spectral_image.h
src/ui/: render_window.cpp  render_window.h
src/ui/components/: spd_file_list_component.cpp  spd_file_list_component.h  uidropdownmenu.cpp  uidropdownmenu.h  uifloat.cpp  uifloat.h  uiint.cpp  uiint.h  uiint2.cpp  uiint2.h  uiopenglimage.cpp  uiopenglimage.h  uispectralgraph.cpp  uispectralgraph.h  uiusdtreeview.cpp  uiusdtreeview.h  usd_tree_component.cpp  usd_tree_component.h
src/usd/: camera.cpp  camera.h  geo.cpp  geo.h  light.cpp  light.h  loader.h  material.cpp  material.h
